# BareBoneKedro

./: README.md  pyproject.toml  requirements.txt
code/: __init__.py  __main__.py  pipeline_registry.py
code/datasets/: hdf5_dataset.py
code/helpers/: viz.py
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
notebooks/: demo.ipynb
